--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,9 @@
-@import "config/variables";
 @import "config/mixins";
+@import "config/variables";
 @import "base/base";
 @import "components/header";
 @import "layout/layout";
-@import "components/menu"
+@import "components/menu";
+@import "components/banner";
+@import "theme/theme"
 
