--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,15 +1,39 @@
+:root {
+  --first-color: #98a8b6; }
+
+:root {
+  --z-back: -10;
+  --z-normal: 1;
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --z-modal: 1000; }
+
+:root {
+  --h1-font-size: 2rem;
+  --body-font-size: .9rem;
+  --small-font-size: .75rem; }
+  @media screen and (min-width: 960px) {
+    :root {
+      --h1-font-size: 2.5rem;
+      --body-font-size: 1rem;
+      --small-font-size: .8rem; } }
+
 *, *::before, *::after {
   box-sizing: border-box; }
 
 body {
   margin: 0;
-  font-family: lazo, sans-serif; }
+  font-family: lato, sans-serif;
+  font-size: var(--body-font-size); }
 
 a {
   text-decoration: none; }
 
 img {
   max-width: 100%; }
+
+h1 {
+  font-size: var(--h1-font-size); }
 
 .main-header {
   height: 3rem;
@@ -31,6 +55,55 @@ img {
   display: flex;
   margin-left: auto;
   margin-right: auto; }
+
+@media screen and (min-width: 960px) {
+  .l-5 {
+    width: 5%; }
+  .l-10 {
+    width: 10%; }
+  .l-15 {
+    width: 15%; }
+  .l-20 {
+    width: 20%; }
+  .l-25 {
+    width: 25%; }
+  .l-30 {
+    width: 30%; }
+  .l-35 {
+    width: 35%; }
+  .l-40 {
+    width: 40%; }
+  .l-45 {
+    width: 45%; }
+  .l-50 {
+    width: 50%; }
+  .l-55 {
+    width: 55%; }
+  .l-60 {
+    width: 60%; }
+  .l-65 {
+    width: 65%; }
+  .l-70 {
+    width: 70%; }
+  .l-75 {
+    width: 75%; }
+  .l-80 {
+    width: 80%; }
+  .l-85 {
+    width: 85%; }
+  .l-90 {
+    width: 90%; }
+  .l-95 {
+    width: 95%; }
+  .l-100 {
+    width: 100%; } }
+
+.center-block {
+  margin-left: auto;
+  margin-right: auto; }
+
+.center-content {
+  text-align: center; }
 
 .main-menu {
   margin-top: 0;
@@ -59,7 +132,8 @@ img {
   top: 3rem;
   right: -80vw;
   transition: right .3s;
-  padding-top: 1rem; }
+  padding-top: 1rem;
+  z-index: var(--z-fixed); }
   @media screen and (min-width: 960px) {
     .main-nav {
       position: static;
@@ -78,3 +152,36 @@ img {
   @media screen and (min-width: 960px) {
     .main-menu-toggle {
       display: none; } }
+
+.main-banner {
+  --padding: 2rem 1rem 3rem;
+  --logo-height: 6.5rem;
+  padding: var(--padding);
+  background: var(--first-color);
+  color: #fff;
+  text-align: center;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 94%);
+  position: relative; }
+  @media screen and (min-width: 960px) {
+    .main-banner {
+      --padding: 5rem 1rem 6rem;
+      --logo-height: 13rem; } }
+  .main-banner__content {
+    position: relative; }
+  .main-banner__logo {
+    height: var(--logo-height);
+    display: block;
+    margin: 0 auto .5rem; }
+  .main-banner__hero-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: .8;
+    filter: blur(2px); }
+
+.small {
+  font-size: var(--small-font-size); }
