--- a/assets/scss/Layout/_layout.scss
+++ b/assets/scss/Layout/_layout.scss
@@ -6,3 +6,22 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+//Anchos Personalizados
+
+
+@include from(l){
+    @for $i from 1 through 20 {
+        .l-#{$i*5}{
+            width: #{$i*5%};
+        }
+    }
+}
+
+.center-block{
+    margin-left: auto;
+    margin-right: auto;
+}
+.center-content{
+    text-align: center;
+}
