--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -3,11 +3,15 @@
 }
 body{
     margin: 0;
-    font-family: lazo, sans-serif;
+    font-family: lato, sans-serif;
+    font-size: var(--body-font-size);
 }
 a{
     text-decoration: none;
 }
 img{
     max-width: 100%;
+}
+h1{
+    font-size: var(--h1-font-size);
 }
