--- a/assets/scss/components/_menu.scss
+++ b/assets/scss/components/_menu.scss
@@ -28,6 +28,7 @@
     right: -80vw;
     transition: right .3s;
     padding-top: 1rem;
+    z-index: var(--z-fixed);
 
     @include from(l) {
         position: static;
