--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,7 @@
 :root {
-  --first-color: #98a8b6; }
+  --first-color: #007bdf;
+  --color-border: #dfe0e0;
+  --color-alert: #ff3c32; }
 
 :root {
   --z-back: -10;
@@ -10,11 +12,15 @@
 
 :root {
   --h1-font-size: 2rem;
+  --h2-font-size: 1.5rem;
+  --h3-font-size: 1.25rem;
   --body-font-size: .9rem;
   --small-font-size: .75rem; }
   @media screen and (min-width: 960px) {
     :root {
       --h1-font-size: 2.5rem;
+      --h2-font-size: 1.75rem;
+      --h3-font-size: 1.5rem;
       --body-font-size: 1rem;
       --small-font-size: .8rem; } }
 
@@ -26,6 +32,9 @@ body {
   font-family: lato, sans-serif;
   font-size: var(--body-font-size); }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0; }
+
 a {
   text-decoration: none; }
 
@@ -34,6 +43,9 @@ img {
 
 h1 {
   font-size: var(--h1-font-size); }
+
+h2 {
+  font-size: var(--h2-font-size); }
 
 .main-header {
   height: 3rem;
@@ -53,8 +65,15 @@ h1 {
   padding-left: 1rem;
   padding-right: 1rem;
   display: flex;
+  margin-right: auto;
   margin-left: auto;
-  margin-right: auto; }
+  flex-wrap: wrap; }
+
+.l-section {
+  margin-bottom: 2rem; }
+  @media screen and (min-width: 960px) {
+    .l-section {
+      margin-bottom: 4rem; } }
 
 @media screen and (min-width: 960px) {
   .l-5 {
@@ -182,6 +201,43 @@ h1 {
     object-position: center;
     opacity: .8;
     filter: blur(2px); }
+
+.card {
+  margin-bottom: 2rem;
+  border: 1px solid var(--color-border); }
+  .card__img img {
+    display: block;
+    margin: auto; }
+  .card__content {
+    padding: 1rem;
+    background: #ffff; }
+  .card__subtitle {
+    margin-top: -1rem;
+    margin-bottom: .5rem;
+    opacity: .6; }
+  .card__footer {
+    border-top: 1px solid var(--color-border);
+    margin-top: 1rem;
+    padding-top: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+
+@media screen and (min-width: 960px) {
+  .cards-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem; } }
+
+.button {
+  color: var(--color-alert);
+  display: inline-block;
+  border: 1px solid;
+  padding: .5em 1em;
+  border-radius: .25rem; }
+  .button:hover {
+    background: var(--color-alert);
+    color: #fff; }
 
 .small {
   font-size: var(--small-font-size); }
