--- a/assets/scss/Layout/_layout.scss
+++ b/assets/scss/Layout/_layout.scss
@@ -3,9 +3,31 @@
     padding-left: 1rem;
     padding-right: 1rem;
     display: flex;
-    margin-left: auto;
     margin-right: auto;
+    margin-left: auto;
+    flex-wrap: wrap;
+
 }
+.l-section{
+    margin-bottom: 2rem;
+    @include from(l){
+        margin-bottom: 4rem;
+    }
+    // &--diagonal{
+    //     position: relative;
+    //     &::before{
+    //         content: "";
+    //         position: absolute;
+    //         width: 100%;
+    //         height: 100%;
+    //         // background: yellow;
+    //         z-index: var(--z-back);
+    //         transform: skewY(-2deg) scaleY(1.1);
+
+    //     }
+    // }
+}
+
 
 //Anchos Personalizados
 
