--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -6,6 +6,9 @@ body{
     font-family: lato, sans-serif;
     font-size: var(--body-font-size);
 }
+h1, h2, h3, h4, h5, h6{
+    margin-top: 0;
+}
 a{
     text-decoration: none;
 }
@@ -14,4 +17,7 @@ img{
 }
 h1{
     font-size: var(--h1-font-size);
+}
+h2{
+    font-size: var(--h2-font-size);
 }
