--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -11,8 +11,10 @@ $breakpoints: (
 //Paleta de Colores
 
 :root{
-    // --first-color: #007bdf;
-    --first-color: #98a8b6;
+    --first-color: #007bdf;
+    //--first-color: #98a8b6;
+    --color-border: #dfe0e0;
+    --color-alert: #ff3c32;
 }
 // Variables de Apilamiento (z-index)
 :root{
@@ -25,11 +27,15 @@ $breakpoints: (
 // Variables de Tipografia
 :root{
     --h1-font-size: 2rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.25rem;
     --body-font-size: .9rem;
     --small-font-size: .75rem;
 
     @include from(l){
         --h1-font-size: 2.5rem;
+        --h2-font-size: 1.75rem;
+        --h3-font-size: 1.5rem;
         --body-font-size: 1rem;
         --small-font-size: .8rem;
     }
