--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -5,5 +5,7 @@
 @import "layout/layout";
 @import "components/menu";
 @import "components/banner";
-@import "theme/theme"
+@import "components/card";
+@import "components/buttons";
+@import "theme/theme";
 
